[project]
name = "mujoco-wheeled-uav-simulator"
version = "0.1.0"
description = "MuJoCo drone-wheel model with MATLAB UDP hover control"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mujoco>=3.6.0",
]

[project.scripts]
mujoco-wheeled-uav-simulator = "qav_wheel.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
only-include = ["qav_wheel"]
